# py-alpha-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml
.agent/skills/add_algo/: SKILL.md
.github/workflows/: CI.yml
alpha-algo/: Cargo.toml  build.rs
alpha-algo/src/: lib.rs
alpha-algo/src/algo/: context.rs  ema.rs  entropy.rs  error.rs  extremum.rs  group.rs  ma.rs  misc.rs  mod.rs  moments.rs  neutralize.rs  scan.rs  series.rs  split.rs  stats.rs  sum.rs  zscore.rs
articles/: 001.md
examples/wq101/: main.py
examples/wq101/al/: __init__.py  alpha101.py  alpha101_context.py
examples/wq101/pd_/: __init__.py  alpha101_adjusted.py
js-binding/: Cargo.toml  Makeifle  README.md
js-binding/src/: lib.rs
lua-binding/: Cargo.toml
lua-binding/src/: algo_bindings.rs  execute.rs  lib.rs  numarray.rs  ta_binding.rs
lua-binding/src/mlang/: gramma.md  mlang.pest  mod.rs  to_lua.rs
lua-binding/src/mlang/runtime/: mod.rs
lua-binding/src/tests/: executor_test.rs  mlang_test.rs  mod.rs  numarray_test.rs  runtime_test.rs
mlang/: Cargo.toml  README.md  gramma.md
mlang/src/: lib.rs  numarray.rs
mlang/src/runtime/: mod.rs  mvalue.rs  vm.rs
mlang/src/tests/: mlang_test.rs  mod.rs  runtime_test.rs
py-binding/: Cargo.toml  README.md  build.rs  pyproject.toml
py-binding/alpha/: context.py
py-binding/python/alpha/: algo.md
py-binding/python/alpha/algo/: algo_gen.py
py-binding/python/alpha/lang/: alpha.lark
py-binding/python/tests/: test_ref_v.py  test_split.py
py-binding/src/: algo_bindings.rs  lib.rs
py-binding/tests/: rank.py
python/alpha/: algo.md
python/alpha/algo/: __init__.py  algo_gen.py
python/alpha/lang/: parser.py  to_python.py
python/tests/: test_rank.py
src/: lib.rs
src/algo/: backfill.rs  context.rs  cross.rs  ma.rs  mod.rs  neutralize.rs  rank.rs  returns.rs  slope.rs  stddev.rs
tests/: usage.py
