[package]
name = "alpha"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alpha"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
pyo3 = { workspace = true, features = ["abi3"] }
pyo3-log.workspace = true
thiserror.workspace = true
numpy.workspace = true
num-traits.workspace = true
rayon.workspace = true
log.workspace = true
alpha-algo = { path = "../alpha-algo", features = ["py-binding"] }

[build-dependencies]
anyhow.workspace = true
